[gd_scene load_steps=3 format=2]

[ext_resource path="res://items/Weapon.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0

[node name="Weapon" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 242, 15 )
offset = Vector2( -204.488, -12.973 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 37, 1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 67, 0 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Weapon_body_entered"]
[connection signal="enemy_weapon_pickup" from="." to="." method="_on_Weapon_enemy_weapon_pickup"]
[connection signal="player_weapon_pickup" from="." to="." method="_on_Weapon_player_weapon_pickup"]
